--- a/Impressum.html
+++ b/Impressum.html
@@ -87,6 +87,8 @@
           Alle Inhalte sind urheberrechtlich geschützt, eine Weiterverwendung bedarf meiner Zustimmung.
         </p>
       </div>
+
+      <a class="card invisible" href="#"></a> <!-- Um die Letzten Zwei Karten zu zentrieren -->
       
       <div class="card large-card">
         <div class="icon">🙏</div>
@@ -111,4 +113,5 @@
 
 </body>
 </html>
+
 
