--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <span class="cta">Mehr erfahren →</span>
       </a>
 
-      <a class="card" href="3d_Slicing_software.html">
+      <a class="card" href="Speedprofile_for_your_printer.html">
         <div class="icon">🔝</div>
         <h2>High-Speed 3D-Druckprofil</h2>
         <p>
@@ -90,4 +90,5 @@
 
 </body>
 </html>
+
 
