--- a/Impressum.html
+++ b/Impressum.html
@@ -14,7 +14,9 @@
       <a href="3d_Printer_buy_recomendation.html">3D-Drucker Kaufempfehlung</a>
       <a href="What_is_important_for_3d_printing.html">Tipps & Fehler</a>
       <a href="3d_Slicing_software.html">Slicing Software</a>
+      <a href="Speedprofile_for_your_printer.html">High-Speed Profile</a>
       <a href="3d_Modeling.html">3D-Konstruktion & 3D-Modelling</a>
+      <a href="How_does_a_3d_Printer_works.html">3D-Drucker Komponenten & Funktionsweise</a>
     </nav>
 
     <h1>Impressum & Disclaimer</h1>
@@ -113,5 +115,6 @@
 
 </body>
 </html>
+
 
 
